--- a/AgileTeamTools.Ui/AgileTeamTools.Ui.csproj
+++ b/AgileTeamTools.Ui/AgileTeamTools.Ui.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
