--- a/AgileTeamTools.Ui/AgileTeamTools.Ui.csproj
+++ b/AgileTeamTools.Ui/AgileTeamTools.Ui.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.3" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="MatBlazor" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
