--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/AgileTeamTools.Ui/Properties/ServiceDependencies/agile-tools - Web Deploy/profile.arm.json
