Adding MudBlazor to UI

--- a/AgileTeamTools.Blazor.Ui/AgileTeamTools.Blazor.Ui.csproj
+++ b/AgileTeamTools.Blazor.Ui/AgileTeamTools.Blazor.Ui.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+	<PackageReference Include="MudBlazor" Version="6.0.4" />
+	<PackageReference Include="MudBlazor.ThemeManager" Version="1.0.5" />
+	  <PackageReference Include="BlazorApplicationInsights" Version="1.5.0" />
   </ItemGroup>
 
 </Project>
