--- a/AgileTeamTools.Blazor.Ui/wwwroot/appsettings.json
+++ b/AgileTeamTools.Blazor.Ui/wwwroot/appsettings.json
@@ -1,3 +1,4 @@
 {
-  "Api_Url": "http://localhost:7071/api/"
+  "Api_Url": "http://localhost:7071/api/",
+  "AppInsights_InstrumentationKey": "99bfffbe-c6a3-40bb-8439-6ae97a0a08f7"
 }
