--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,28 +1,32 @@
-name: CI Build
+name: continuous-integration
 
 on:
+  workflow_dispatch:
   push:
     branches: '**'
   pull_request:
-    branches: '**'
+    branches: '**' 
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./src
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x
-
-      - name: Restore Nuget Package Dependencies
-        run: dotnet restore agile-team-tools.sln
-
-      - name: Build Solution
-        run: dotnet build --configuration Release --no-restore 
-
-      - name: Run Unit Tests
-        run: dotnet test --no-restore --verbosity normal
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+        
+    - name: Install dependencies
+      run: dotnet restore
+      
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+      
+    - name: Test
+      run: dotnet test --no-restore --verbosity normal
